--- a/site.css
+++ b/site.css
@@ -11,21 +11,37 @@ body {
 
 section {
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 section > div {
-  font-size: 160px;
+  font-size: 80px;
   text-align: center;
-  width: 900px;
+  width: 320px;
   margin: auto;
 }
 
 section h1 {
   margin: 50px;
+  transition-duration: 1s;
 }
 
 section h3 {
-  font-size: 100px;
+  font-size: 30px;
+}
+
+section button {
+  transition-duration: 1s;
+  box-shadow: none;
+  border: 3px solid #fff;
+  border-radius: 25px;
+  background-color: inherit;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  font-size: 30px;
+  padding: 20px 40px;
 }
 
 footer {
